[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>",
          "Denys Vitali <denys@denv.it>"]
name = "poppler"
license = "GPL-2.0"
version = "0.3.2"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[dependencies]
cairo-rs = { version = "0.15", features = ["png", "pdf"] }
chrono = "0.4.23"
glib = "0.15"
libc = "0.2.139"

[dev-dependencies]
tempfile = "3.4.0"
